# file_cleaner

./: .env  .gitignore  Cargo.toml  README.md
src/: dir_scanner.rs  file.rs  file_cleaner.rs  file_cutter.rs  main.rs  mod.rs
